Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -13,10 +13,17 @@ variables:
 # define the steps of the build
 steps:
 
+## Update OpenSSL version
+- script: |
+    sudo apt-get update && sudo apt-get install -y openssl
+    sudo update-alternatives --set openssl /usr/lib/ssl-1.0.0/openssl.cnf
+  displayName: 'Update OpenSSL'
+
 ## Run the npm install/build
 - script: |
     pushd $(projectFolder) && npm install && popd
     pushd $(projectFolder) && npm run build && popd
+
 ## Copy the client to the staging directory
 - task: CopyFiles@2
   inputs:
