--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -8,6 +8,10 @@ trigger:
 
 pool:
   vmImage: ubuntu-latest
+# define variables to use during the build
+variables:
+  projectFolder: 'src/angular'
+  buildOutputFolder: 'src/angular/dist/angular'
 
 steps:
 - task: NodeTool@0
