Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -13,10 +13,20 @@ variables:
 # define the steps of the build
 steps:
 
-## Run the npm install/build
+- task: NodeTool@0
+  inputs:
+    versionSpec: '14.x'
+  displayName: 'Install Node.js'
+
 - script: |
-    pushd $(projectFolder) && npm install && popd
-    pushd $(projectFolder) && npm run build && popd
+    npm install -g @angular/cli
+    npm install
+    ng build --prod
+  displayName: 'npm install and build'
+## Run the npm install/build
+##- script: |
+##    pushd $(projectFolder) && npm install && popd
+##    pushd $(projectFolder) && npm run build && popd
 ## Copy the client to the staging directory
 - task: CopyFiles@2
   inputs:
