--- a/azure-pipelines-2.yml
+++ b/azure-pipelines-2.yml
@@ -3,27 +3,44 @@
 
 # define the VM image I want to use for my build
 pool:
-  vmImage: 'Ubuntu-latest'
+  vmImage: 'Ubuntu 16.04'
 
 # define variables to use during the build
 variables:
   projectFolder: 'src/angular'
   buildOutputFolder: 'src/angular/dist/angular'
 
-steps: 
-- task: UseNode@1
-  inputs:
-    version: '16.x'
-  displayName: 'Install Node.js'
+# define the steps of the build
+steps:
 
-- script: npm install -g @angular/cli@13.2.5
+## Install Angular CLI
+- script: |
+    npm install -g @angular/cli@13.2.5
   displayName: 'Install Angular CLI'
 
-- task: UseNode@1
-  inputs:
-    version: '16.x'
-    checkLatest: true
-  displayName: 'Use Node.js version'
-
-- script: ng build
+## Build Angular project
+- script: |
+    cd $(projectFolder)
+    ng build
   displayName: 'Angular Build'
+
+## Copy the client to the staging directory
+- task: CopyFiles@2
+  inputs:
+    sourceFolder: '$(buildOutputFolder)' 
+    contents: '**/*' 
+    targetFolder: '$(Build.ArtifactStagingDirectory)'
+    cleanTargetFolder: true
+
+## Archive the files into a zip file for publishing
+- task: ArchiveFiles@2
+  inputs:
+    rootFolderOrFile: $(Build.ArtifactStagingDirectory)
+    archiveType: 'zip'
+    archiveFile: '$(Build.ArtifactStagingDirectory)/$(Build.BuildId).zip'
+    includeRootFolder: false
+
+## Publish the zip file
+- task: PublishBuildArtifacts@1
+  inputs:
+    pathtoPublish: '$(Build.ArtifactStagingDirectory)/$(Build.BuildId).zip'
